--- a/main.html
+++ b/main.html
@@ -7,9 +7,10 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	<main id ="job" class ="accio">
+		<p id ="hello-accio">Hello Accio Job</p>
+		
+	</main>
 
 </body>
 
