--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<main id ="job" class ="accio">
-		<p id ="hello-accio">Hello Accio Job</p>
+		<p class ="hello-accio">Hello Accio Job</p>
 		
 	</main>
 
